# pico-macropad-rs

./: Cargo.toml  convert_images.sh  flake.nix  runner.sh  test_config.cfg
.cargo/: config.toml
configs/: BITWIG.cfg  COSMIC.cfg  CS2.cfg  CS2.json  DARKTB.cfg  FIREFOX.cfg  FLSTUDIO.cfg  FREECAD.cfg  FreeCAD.cfg  FreeCAD.json  GIMP.cfg  gen_configs.py
macropad-model/: Cargo.toml
macropad-model/src/: lib.rs
src/: containers.rs  dummy_time_source.rs  encoder.rs  example_config.rs  lib.rs  main.rs  read_config.rs  rotary_encoder.rs  test_config.rs  update_display.rs
webapp/: README.md  app.js  index.html  plan.md  style.css  webapp.md
webapp/src/: app.js
webapp/wasm/: Cargo.toml
webapp/wasm/src/: lib.rs
