[package]
edition = "2021"
name = "pico-macropad-rs"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = { git = "https://github.com/hoenas/rp-hal-boards.git", branch = "dev/update-rp2040-hal"}
embedded-sdmmc = "0.5.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
rotary-encoder-hal = "0.6.0"
sh1106 = "0.5.0"
usb-device = "0.3"
packed_struct = { version = "0.10", default-features = false }
frunk = { version = "0.4", default-features = false }
fugit = "0.3"
cortex-m-rtic = "1.1"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
usbd-human-interface-device = { version = "0.6.0", features = ["defmt"] }
panic-halt = "1.0.0"
# ws2812-pio = "0.9.0"
rp2040-boot2 = "0.3.0"
ws2812-pio = { git = "https://github.com/IVAN-MK7/ws2812-pio-rs.git", branch = "hal-0.12" }
smart-leds = "0.4.0"
embedded-graphics = "0.8.2"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
