[package]
name = "pico-macropad-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.2", default-features = false }
serde-wasm-bindgen = "0.6.0"
macropad-model = { path = "../../macropad-model" }
